--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -9,14 +9,15 @@
    <input class="controls" type="text" name="code" id="code" placeholder="Ingrese su code" required>
     <button class="botons" type="submit" id="add-btn" >Registrar </button>
     <h2> Para eliminar un producto:</h2>
-    <input class="controls" type="number" name="id-prod" id="id-prod" placeholder="Ingrese ID" >
+    <input class="controls" type="text" name="id-prod" id="id-prod" placeholder="Ingrese ID" >
    <button class="botons" type="button" id="delete-btn">Eliminar</button>
 
   </form>
 
-    <article id="list-products">
 
-    </article>
+ <article id="list-products">
+      
+</article>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="/js/realtime.js"></script>
